# fincept

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AAAAAAAAA_BIG_PLAN.md  AAA_MULTI_AGENT_6_25_plan.md  AGENTS.md  AUDIT_REMEDIATION_REPORT.md  Devin_Swarm_Succes_1.md  IMPLEMENTATION.md  Makefile  PROJECT_OVERVIEW.md  README.md  RUNPOD_SESSION_HANDOFF.md  UI_AUDIT_2026-06-26.md  aestheticaudit.md  conftest.py  docker-compose.yml  featuresmenu.md  mypy.ini  nixpacks.toml  pnpm-lock.yaml  pyproject.toml  railway-production.json  railway.json  ruff.toml  start.bat  status.bat  stop.bat  swarm_agent_taskbreakdown_modeltrainer.md
experiments/news-impact-model/: README.md  pyproject.toml
experiments/news-impact-model/docs/: IMPLEMENTATION_STATUS.md  MAIN_SYSTEM_INTEGRATION.md  NEWS_IMPACT_PROMOTION_PROGRESS.md  OPTIMIZATION_PLAYBOOK.md
experiments/news-impact-model/sample_data/: historical_outcomes.jsonl
experiments/news-impact-model/scripts/: demo.py  optimize_weights.py  serve_workbench.py
experiments/news-impact-model/tests/: test_data_io.py  test_model_evaluation_foundation.py  test_news_data_foundation.py  test_news_impact_model.py  test_training_optimizer.py  test_workbench.py
experiments/news-impact-model/workbench/: app.js  index.html  styles.css
libs/fincept-bus/: pyproject.toml
libs/fincept-bus/tests/: test_consumer.py  test_producer.py  test_streams.py
libs/fincept-core/: pyproject.toml
libs/fincept-core/tests/: test_approved_roots.py  test_clock.py  test_config.py  test_cv.py  test_datasets_dossier.py  test_datasets_init.py  test_datasets_schemas.py  test_events.py  test_feature_snapshots.py  test_heartbeat.py  test_http.py  test_ids.py  test_imports.py  test_labels.py  test_leadership.py  test_logging.py  test_portfolio.py  test_prediction_log.py  test_schema_compat.py  test_schemas.py  test_settlement_ledger.py  test_startup_safety_matrix.py  test_storage.py  test_strategy_config.py
libs/fincept-db/: alembic.ini  pyproject.toml
libs/fincept-db/tests/: conftest.py  test_audit.py  test_bars.py  test_evidence_redaction.py  test_features.py  test_provider_data.py  test_settlement_records_schema.py  test_ticks.py
libs/fincept-sdk/: pyproject.toml
libs/fincept-sdk/tests/: test_strategy.py
libs/fincept-tools/: pyproject.toml
libs/fincept-tools/tests/: test_analytics_tools.py  test_data_tools.py  test_exec_tools.py  test_protocol.py  test_registry.py  test_research_exa.py  test_research_openbb.py
services/agents/: pyproject.toml
services/agents/tests/: test_base.py  test_gbm_feature_health.py  test_gbm_features.py  test_gbm_hot_reload.py  test_gbm_infer.py  test_gbm_shadow.py  test_gbm_train.py  test_information_enricher.py  test_llm_router.py  test_logreg_baseline.py  test_news_alpha_evaluate.py  test_news_alpha_predictor.py  test_news_alpha_train.py  test_news_impact_agent.py  test_news_outcome_labeler.py  test_regime_rules.py  test_sentiment_features.py  test_sentiment_information_stream.py  test_sentiment_llm.py  test_walk_forward_cv.py
services/api/: pyproject.toml
services/api/tests/: conftest.py  test_auth.py  test_backtest.py  test_control.py  test_data.py  test_feature_importance.py  test_golden_e2e_smoke.py  test_health.py  test_models.py  test_models_outcomes.py  test_models_train.py  test_modules.py  test_news.py  test_news_impact.py  test_orders.py  test_positions.py  test_predictions.py  test_promotion_endpoints.py  test_promotions.py  test_provider_data.py  test_provider_evidence.py  test_quant_foundry.py  test_quant_foundry_budget.py  test_quant_foundry_dossiers.py  test_quant_foundry_shadow.py  test_quant_foundry_startup.py  test_quant_foundry_worker_health.py  test_rate_limit.py  test_regime.py  test_research.py  test_settlements_poller.py  test_strategies.py  test_symbol_search.py  test_training.py
services/backtester/: pyproject.toml
services/backtester/tests/: test_blotter.py  test_borrow_cost.py  test_broker.py  test_costs.py  test_costs_v2.py  test_datasource.py  test_engine.py  test_gbm_features.py  test_gbm_strategy.py  test_ingest.py  test_risk_gate.py  test_walk_forward.py
services/features/: pyproject.toml
services/features/tests/: test_backfill.py  test_computer.py  test_cross.py  test_definitions.py  test_main.py  test_online_runner.py  test_pit.py  test_price.py  test_store.py  test_volatility.py
services/ingestor/: pyproject.toml
services/ingestor/tests/: test_base.py  test_binance_normalize.py  test_coinbase_normalize.py  test_eod_equity.py  test_kraken_normalize.py  test_latency.py  test_main.py  test_normalizer.py  test_quality.py  test_writer.py
services/jobs/: pyproject.toml
services/jobs/tests/: test_daily_eod_load.py  test_main.py  test_news_alpha_candidate_train.py
services/oms/: pyproject.toml
services/oms/tests/: test_alpaca_client.py  test_alpaca_runtime.py  test_alpaca_symbols.py  test_main.py  test_main_handlers.py  test_news_sync.py  test_paper.py  test_prices.py  test_processor.py  test_state.py
services/orchestrator/: pyproject.toml
services/orchestrator/tests/: test_allocator.py  test_consensus.py  test_decisions.py  test_main.py  test_regime_integration.py  test_router.py  test_sentiment_integration.py
services/quant_foundry/: pyproject.toml
services/quant_foundry/tests/: conftest.py  test_alpha_genome.py  test_alpha_genome_integration.py  test_artifact_writer.py  test_artifacts.py  test_auto_promotion.py  test_auto_shadow_dispatch.py  test_auto_tournament.py  test_baseline_family.py  test_benchmark.py  test_budget.py  test_bundle_io.py  test_c10_dual_write.py  test_c10_flags.py  test_c10_read_compare.py  test_c10_read_switch.py  test_calibration.py  test_callback_db_sinks.py  test_callback_dlq.py  test_callback_metrics.py  test_catboost_trainer.py  test_causal_graph.py  test_champion_challenger.py  test_column_roles.py  test_conformal_gate.py  test_cost_tracker.py  test_data_ingestion.py  test_dataset_manifest_builder.py  (+123 more)
services/risk/: pyproject.toml
services/settlements/: pyproject.toml
services/strategy_host/: pyproject.toml
(+1392 files in other folders)
