[project]
name = "fincept-terminal"
version = "0.0.0"
description = "Internal AI-agentic stock & crypto trading platform"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "libs/fincept-core",
    "libs/fincept-bus",
    "libs/fincept-db",
    "libs/fincept-tools",
    "libs/fincept-sdk",
    "services/ingestor",
    "services/features",
    "services/agents",
    "services/orchestrator",
    "services/risk",
    "services/oms",
    "services/portfolio",
    "services/api",
    "services/backtester",
    "services/jobs",
]

[tool.uv.sources]
fincept-core = { workspace = true }
fincept-bus = { workspace = true }
fincept-db = { workspace = true }
fincept-tools = { workspace = true }
fincept-sdk = { workspace = true }
ingestor = { workspace = true }
features = { workspace = true }
portfolio = { workspace = true }
risk = { workspace = true }
agents = { workspace = true }
oms = { workspace = true }
orchestrator = { workspace = true }
backtester = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    # mypy plugins / stubs that load before any service-specific deps exist.
    # Concrete service deps live in each services/<svc>/pyproject.toml.
    "pydantic>=2.9",
    "types-redis>=4.6",
]

[tool.pytest.ini_options]
testpaths = ["libs", "services"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib -m 'not long and not gpu and not live'"
filterwarnings = ["error"]
markers = [
    "long: tests that take >30s; run only in nightly.yml",
    "gpu: tests that require a GPU; not run in CI by default",
    "live: tests that hit external APIs; manual only",
]

[tool.ruff.lint]
# B008: function call in argument default.  Suppressed because every
# FastAPI route uses `Depends(...)`, `Body(...)`, `Query(...)` etc. as
# defaults — the canonical pattern, and a well-known B008 false-positive
# (the calls return immutable sentinels).
ignore = ["B008"]

[tool.coverage.run]
source = ["fincept_core", "fincept_bus", "fincept_db", "fincept_tools"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
