[project]
name = "news-impact-model"
version = "0.1.0"
description = "News impact ML model experiment — analog retrieval and walk-forward weight optimization"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_impact_model"]
