[project]
name = "fincept-bus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "redis[hiredis]>=5.1",
  "fincept-core",
]

[dependency-groups]
dev = [
  "fakeredis>=2.25",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "types-redis>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fincept_bus"]
