[project]
name = "fincept-tools"
version = "0.1.0"
description = "Stub for fincept-tools — implemented by a later TASK in spec/BUILD_ORDER.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fincept_tools"]