[project]
name = "agents"
version = "0.1.0"
description = "Strategy agents (gbm_predictor, regime, pairs). Read features from OnlineStore, emit Prediction events to STREAM_SIG_PREDICT."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-bus",
  "features",
  "redis>=5.0",
  "pydantic>=2.7",
  "lightgbm>=4.5",
  "numpy>=2.0",
  "polars>=1.0",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "fakeredis>=2.25",
  "types-redis>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "long: tests that take >30s; run only in nightly.yml",
]

[tool.ruff.lint]
ignore = []