[project]
name = "api"
version = "0.1.0"
description = "FastAPI HTTP + WebSocket service. Read-only views over the trading bus + Redis state, plus kill-switch control. The integration layer between the trading stack and any external client (UI, CLI, monitoring)."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-bus",
  "fincept-db",
  "fincept-tools",
  "portfolio",
  "backtester",
  "oms",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "redis>=5.0",
  "pydantic>=2.7",
  "pyjwt>=2.9",
  "quant-foundry",
  "settlements",
  "news-impact-model",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "fakeredis>=2.25",
  "httpx>=0.27",
  "types-redis>=4.6",
]

[tool.uv.sources]
portfolio = { workspace = true }
backtester = { workspace = true }
oms = { workspace = true }
quant-foundry = { workspace = true }
settlements = { workspace = true }
news-impact-model = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff.lint]
# B008: function call in argument default.  Every FastAPI route uses
# Depends/Body/Query as defaults — canonical pattern, well-known
# B008 false-positive.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# training.py dispatches the quant-foundry training subprocess intentionally.
"src/api/training.py" = ["S603"]
