[project]
name = "api"
version = "0.1.0"
description = "FastAPI HTTP + WebSocket service. Read-only views over the trading bus + Redis state, plus kill-switch control. The integration layer between the trading stack and any external client (UI, CLI, monitoring)."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-bus",
  "fincept-db",
  "fincept-tools",
  "portfolio",
  "backtester",
  "oms",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "redis>=5.0",
  "pydantic>=2.7",
  "pyjwt>=2.9",
  "quant-foundry",
  "settlements",
  "news-impact-model",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "fakeredis>=2.25",
  "httpx>=0.27",
  "types-redis>=4.6",
]

[tool.uv.sources]
portfolio = { workspace = true }
backtester = { workspace = true }
oms = { workspace = true }
quant-foundry = { workspace = true }
settlements = { workspace = true }
news-impact-model = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff.lint]
# B008: function call in argument default.  Every FastAPI route uses
# Depends/Body/Query as defaults — canonical pattern, well-known
# B008 false-positive.
#
# NOTE: this config overrides the root `ruff.toml` for files under
# services/api/. The deferred-style-rule ignores below mirror the root
# config so CI behaviour is consistent across the workspace.
ignore = [
    "B008",   # function call in argument default (FastAPI Depends/Body/Query)
    "SIM108", # if-else-block-instead-of-if-exp (style preference)
    "RUF001", # ambiguous-unicode-character-string (intentional Greek letters in math)
    "SIM102", # collapsible-if (style preference)
    "SIM117", # multiple-with-statements (style preference)
    "RUF002", # ambiguous-unicode-character-docstring (intentional Greek letters)
    "S110",   # try-except-pass (context-dependent, may be intentional)
    "SIM103", # needless-bool (style preference)
    "T201",   # print (scripts/CLI tools use print intentionally)
    "RUF043", # pytest-raises-ambiguous-pattern (test-specific)
    "SIM105", # suppressible-exception (style preference)
    "E741",   # ambiguous-variable-name (math contexts: n, i, l, etc.)
    "RUF005", # collection-literal-concatenation (style preference)
    "SIM118", # in-dict-keys (style preference)
    "RUF003", # ambiguous-unicode-character-comment (intentional)
    "S112",   # try-except-continue (context-dependent, may be intentional)
    "S607",   # start-process-with-partial-path (scripts may use partial paths)
    "E731",   # lambda-assignment (style preference)
    "RUF015", # unnecessary-iterable-allocation-for-first-element (style)
    "UP042",  # replace-str-enum (requires API changes to migrate to StrEnum)
    "ASYNC251", # blocking-sleep-in-async-function (context-dependent)
    "RUF012", # mutable-class-default (requires API changes to refactor)
]

[tool.ruff.lint.per-file-ignores]
# training.py dispatches the quant-foundry training subprocess intentionally.
"src/api/training.py" = ["S603"]
