[project]
name = "backtester"
version = "0.1.0"
description = "Stub for backtester — implemented by a later TASK in spec/BUILD_ORDER.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtester"]