[project]
name = "backtester"
version = "0.1.0"
description = "Deterministic event-driven backtester. Replays historical bars from Timescale, simulates fills with realistic costs, emits trade blotter + equity curve."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-db",
  "fincept-sdk",
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtester"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "long: tests that take >30s; run only in nightly.yml",
]
