[project]
name = "features"
version = "0.1.0"
description = "Online feature transforms (returns, vol, microstructure, cross). Subscribes to md.bars.1m, publishes FeatureFrame to features.online."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-bus",
  "redis>=5.0",
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "types-redis>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/features"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "long: tests that take >30s; run only in nightly.yml",
]
