[project]
name = "ingestor"
version = "0.1.0"
description = "Market-data ingestor: connects to venue WebSockets, normalises to canonical schemas, fans out to Redis Streams + Timescale."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-bus",
  "fincept-db",
  "websockets>=13",
  "orjson>=3.10",
  "pydantic>=2.7",
  "redis>=5.0",
  "yfinance>=0.2.40",
  "pandas>=2.2",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "fakeredis>=2.25",
  "types-redis>=4.6",
  "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "long: tests that take >30s; run only in nightly.yml",
  "live: tests that hit external APIs; manual only",
]