[project]
name = "jobs"
version = "0.1.0"
description = "Scheduled jobs (EOD loaders, calendar maintenance) — APScheduler-driven."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-db",
  "ingestor",
  "apscheduler>=3.10",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[tool.uv.sources]
ingestor = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "long: tests that take >30s; run only in nightly.yml",
  "live: tests that hit external APIs; manual only",
]
