[project]
name = "oms"
version = "0.1.0"
description = "Order Management System: consumes OrderIntents, simulates fills (paper) or routes to venues (live), maintains the order state machine + audit log."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-bus",
  "fincept-db",
  "portfolio",
  "risk",
  "redis>=5.0",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "fakeredis>=2.25",
  "types-redis>=4.6",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oms"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
