[project]
name = "settlements"
version = "0.1.0"
description = "Settlement worker MVP: tails the prediction log and writes settlement records to the ledger."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/settlements"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff.lint]
ignore = []
