[project]
name = "strategy_host"
version = "0.1.0"
description = "Strategy Host service: runs StrategyConfig instances against the live bar/fill streams, dispatches strategy hooks, and submits OrderIntents."
requires-python = ">=3.12"
dependencies = [
  "fincept-core",
  "fincept-bus",
  "fincept-sdk",
  "backtester",
  "redis>=5.0",
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "fakeredis>=2.25",
  "types-redis>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strategy_host"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
